# oanda-sdk

./: .gitignore  mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md
docs/api/: account.md  client.md  instrument.md  overview.md
src/oanda/: __init__.py  client.py  order.py  position.py  pricing.py  transaction.py
src/oanda_sdk/: instrument.py
tests/: conftest.py  test_account.py  test_oanda.py
