[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oanda"
version = "0.0.1"
authors = [
  { name="Nat Liu", email="n8wyliu@gmail.com" },
]
description = "An SDK for trading forex currency pairs."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"